"""Auto-generated SQLModel schema from schema.dbml.
Generated by config/generate_schema.py
"""

from sqlmodel import Field, Relationship, SQLModel


class Team(SQLModel, table=True):
    """Database model for team table."""

    id: int | None = Field(default=None, primary_key=True)
    name: str
    headquarters: str
    heroes: list["Hero"] = Relationship(back_populates="team")


class Hero(SQLModel, table=True):
    """Database model for hero table."""

    id: int | None = Field(default=None, primary_key=True)
    name: str
    secret_name: str
    age: int | None = None
    team_id: int | None = Field(default=None, foreign_key="team.id")
    team: Team | None = Relationship(back_populates="heroes")
